
    HIVE-1900 a mapper should be able to span multiple partitions
    (namit via He Yongqiang)

    HIVE-1818 Call frequency and duration metrics for HiveMetaStore via jmx
    (Sushanth Sowmyan via pauly)

    HIVE-1971 Verbose/echo mode for the Hive CLI
    (Jonathan Natkins via Ning Zhang)

    HIVE-1948 Add audit logging in the metastore
    (Devaraj Das via namit)

  IMPROVEMENTS

    HIVE-1235 use Ivy for fetching HBase dependencies (John Sichi via cws)

    HIVE-1931 Improve the implementation of the METASTORE_CACHE_PINOBJTYPES config (Mac Yang via cws)"

    HIVE-1692. FetchOperator.getInputFormatFromCache hides causal exception (Philip Zeyliger via cws)

    HIVE-1899 Add a factory method for creating a synchronized wrapper for IMetaStoreClient (John Sichi via cws)

    HIVE-1852 Reduce unnecessary DFSClient.rename() calls (Ning Zhang via jssarma)

    HIVE-1712. Migrating metadata from derby to mysql thrown NullPointerException (Jake Farrell via pauly)

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

    HIVE-1447. Speed up reflection method calls (Zheng via He Yongqiang)

    HIVE-1462. Report progress in FileSinkOperator works in multiple directory
    case
    (Siying Dong via Ning Zhang)

    HIVE-1469. replace isArray() calls and remove LOG.isInfoEnabled() in
    Operator.forward()
    (Yongqiang He via Ning Zhang)

    HIVE-1463. Hive output file names are unnecessarily large
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1229. Replace dependencies on HBase deprecated API.
    (Basab Maulik via jvs)

    HIVE-1513. hive starter scripts should load admin/user supplied script for
    configurability
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1495. supply correct information to hooks and lineage for